fix: allow overflowing to refresh

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -20,7 +20,6 @@ $ease-out: cubic-bezier(0, 0, 0.2, 1);
 
 html, body {
   overflow-x: hidden;
-  overscroll-behavior: none;
 }
 
 body {
